# serde_state

serde_state/: Cargo.toml
serde_state/tests/: derive_named_struct.rs
serde_state_derive/src/: de.rs
