[package]
name = "serde_state"
version = "1.0.0"
authors = ["Guillaume Boisseau <nadrieril+git@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_state_derive = { version = "1", path = "../serde_state_derive" }

[dev-dependencies]
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }
